Expand HLASM support and validate against Hercules